Fixed layout issues.

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -29,8 +29,8 @@ body { background: #0f0f0f; }
 /* ------------------------------------------------------------------ */
 
 header {
-   /* position: relative;
-   height: 800px;
+   position: relative;
+   /* height: 800px;
    min-height: 500px;
    width: 100%;
    background: #161415 url(../images/header-background.jpg) no-repeat top center;
